@@ -295,6 +295,8 @@ AC_CHECK_FUNC(socket, [], [
 dnl Better not use fchmod at all.
 AC_CHECK_FUNC(fchmod)
 
+AC_CHECK_FUNCS(vsnprintf snprintf)
+
 dnl Temporary hack for MiNT.  Some functions (writev, snprintf) are
 dnl not in the libc but in libport (for political reasons).  This check
 dnl can hopefully be removed soon.  Please use the default action
